tests/errors/invalid-multistaff-clef-change.typ
#import "../../src/lib.typ": score

#score(
  staves: (upper: (clef: "treble"), lower: (clef: "bass")),
  time: "4/4",
  bars: ((clef: "alto", upper: "c5:w", lower: "c3:w"),),
)
